* Added simple unit test for simple command